--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Install pre-commit
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip uv
         pip install pre-commit
 
     - name: Run pre-commit checks
@@ -31,10 +31,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: true
 
     - name: Install pre-commit
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip uv
         pip install pre-commit
 
     - name: Setup git
