fix: simplify fork.sh and link to agents docs

--- a/gptme.toml
+++ b/gptme.toml
@@ -3,6 +3,9 @@ files = [
   "ARCHITECTURE.md",
   "ABOUT.md",
   "TASKS.md",
+  "TOOLS.md",
+  "lessons/README.md",
   "projects/README.md",
   "gptme.toml"
 ]
+context_cmd = "scripts/context.sh"
