--- a/systemd/user/agent-autonomous.service
+++ b/systemd/user/agent-autonomous.service
@@ -3,7 +3,7 @@ Description=Agent Autonomous Operation
 After=network.target
 
 [Service]
-Type=oneshot
+Type=simple
 WorkingDirectory=/path/to/your/workspace
 ExecStart=/path/to/your/workspace/scripts/runs/autonomous/autonomous-run.sh
 StandardOutput=journal
