fix: Make tasks.py optional as intended (addresses greptile feedback)
- scripts/context.sh: Add conditional check for tasks.py existence
- .pre-commit-config.yaml: Remove tasks.py validation hook (optional tool)
- fork.sh: Initialize gptme-contrib submodule before use, make tasks.py call optional

tasks.py is documented as optional (from gptme-contrib) but was referenced
unconditionally in three locations, breaking functionality when not present.

Fixes critical issues identified in PR review (greptile 1/5 confidence score).

Co-authored-by: Bob <bob@superuserlabs.org>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,13 +43,5 @@ repos:
         types: [markdown]
         files: ^tasks/.*\.md$
 
-      # redundant? already validated by validate-task-frontmatter?
-      # should combine them
-      - id: validate-tasks
-        name: Validate task metadata
-        description: Validates YAML frontmatter in task files
-        entry: ./scripts/tasks.py check
-        language: system
-        types: [markdown]
-        pass_filenames: false
-        #files: ^tasks/.*\.md$
+      # tasks.py validation removed - tasks.py is optional (from gptme-contrib)
+      # If you have gptme-contrib installed, you can run: ./scripts/tasks.py check
