fix(review): address PR review feedback on optional tasks.py handling
- scripts/context.sh: use -x check for executable instead of -f
- .pre-commit-config.yaml: add validation hook that gracefully handles missing tasks.py
- README.md: clarify tasks.py is optional from gptme-contrib

Addresses review comments from Greptile bot:
- scripts/context.sh line 32: robustness check
- .pre-commit-config.yaml line 55: include validation or skip if missing
- README.md line 88: clarify optional status

Co-authored-by: Bob <bob@superuserlabs.org>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,6 +42,9 @@ repos:
         language: system
         types: [markdown]
         files: ^tasks/.*\.md$
-
-      # tasks.py validation removed - tasks.py is optional (from gptme-contrib)
-      # If you have gptme-contrib installed, you can run: ./scripts/tasks.py check
+      - id: validate-task-metadata
+        name: Validate task metadata
+        entry: bash -c 'if [ -x "./scripts/tasks.py" ]; then ./scripts/tasks.py check; else echo "tasks.py not found (optional) - skipping validation"; fi'
+        language: system
+        types: [markdown]
+        files: ^tasks/.*\.md$
