feat: Add work queue and context generation systems (Phase 3.1 - PR 1.3) (#29)
* feat: Add work queue and context generation systems (Phase 3.1 - PR 1.3)

Adds work queue management and context generation infrastructure:

Work Queue System (state/):
- queue-manual.md: Template for manually maintained work queue
- queue-generated.md: Template for auto-generated queue
- README.md: Complete documentation of two-queue system

Scripts Documentation (scripts/):
- README.md: Comprehensive documentation of context generation,
  task management, and autonomous run scripts
- Note tasks.py as optional (provided by gptme-contrib)

Main README updates:
- Document state/ and scripts/ directories
- Explain work queue and context generation systems
- Link to detailed documentation

Fixes:
- Remove broken tasks.py symlink (will be added in PR 2.3)
- Update documentation to note tasks.py as optional

Part of gptme-agent-template Phase 3.1 implementation.
See ErikBjare/bob#167 for context.

* fix: Make tasks.py optional as intended (addresses greptile feedback)

- scripts/context.sh: Add conditional check for tasks.py existence
- .pre-commit-config.yaml: Remove tasks.py validation hook (optional tool)
- fork.sh: Initialize gptme-contrib submodule before use, make tasks.py call optional

tasks.py is documented as optional (from gptme-contrib) but was referenced
unconditionally in three locations, breaking functionality when not present.

Fixes critical issues identified in PR review (greptile 1/5 confidence score).

Co-authored-by: Bob <bob@superuserlabs.org>

* fix(fork): fix CI markdown link check failures

Fixes broken links in forked agents by:
- Add state/ directory to fork.sh copy list (core infrastructure)
- Add lessons/TEMPLATE.md to fork.sh copy list
- Update lessons/README.md with TEMPLATE.md reference from origin/master
- Fix template file copy to use explicit paths instead of glob

Root cause: PR merges into origin/master which includes lessons-system
changes, but fork.sh d

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,14 +42,9 @@ repos:
         language: system
         types: [markdown]
         files: ^tasks/.*\.md$
-
-      # redundant? already validated by validate-task-frontmatter?
-      # should combine them
-      - id: validate-tasks
+      - id: validate-task-metadata
         name: Validate task metadata
-        description: Validates YAML frontmatter in task files
-        entry: ./scripts/tasks.py check
+        entry: bash -c 'if [ -x "./scripts/tasks.py" ]; then ./scripts/tasks.py check; else echo "tasks.py not found (optional) - skipping validation"; fi'
         language: system
         types: [markdown]
-        pass_filenames: false
-        #files: ^tasks/.*\.md$
+        files: ^tasks/.*\.md$
