fix(ci): update fork.sh path in test workflow
The script was moved from root to scripts/, so the workflow must
reference the new location: ./scripts/fork.sh

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,5 +47,5 @@ jobs:
     - name: Test fork.sh script
       run: |
         # Test basic usage (script will do its own validation)
-        ./fork.sh test-agent
-        ./fork.sh test-agent-named TestAgent
+        ./scripts/fork.sh test-agent
+        ./scripts/fork.sh test-agent-named TestAgent
