--- a/.github/workflows/validate-workspace.yml
+++ b/.github/workflows/validate-workspace.yml
@@ -32,6 +32,9 @@ jobs:
       with:
         submodules: recursive
 
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -44,7 +47,7 @@ jobs:
     - name: Test fork.sh creates valid workspace
       run: |
         # Run fork script
-        ./fork.sh /tmp/test-agent test-agent
+        ./scripts/fork.sh /tmp/test-agent test-agent
 
         # Validate the forked workspace using gptme-contrib validator
         cd /tmp/test-agent
