fix(container): address CI failures and review feedback
- Fix uv PATH issue: Install uv system-wide (/usr/local/bin) so testuser can access it
- Fix Test 10: Only check scripts/context.sh (fork.sh is NOT copied to forked agents)
- Improve debugging: Remove stderr suppression from fork.sh call
- Simplify Test 4: Remove redundant capitalized variant check

Addresses:
- CI failure: 'uv' command not found when running as testuser
- Review feedback from greptile-apps on Test 10 scripts/fork.sh check

--- a/tests/container/Dockerfile
+++ b/tests/container/Dockerfile
@@ -17,9 +17,12 @@ RUN apt-get update && apt-get install -y \
     systemd \
     && rm -rf /var/lib/apt/lists/*
 
-# Install uv for Python package management
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
-ENV PATH="/root/.local/bin:$PATH"
+# Install uv for Python package management (system-wide so testuser can access it)
+RUN curl -LsSf https://astral.sh/uv/install.sh -o /tmp/uv-install.sh && \
+    sh /tmp/uv-install.sh && \
+    mv /root/.local/bin/uv /usr/local/bin/uv && \
+    mv /root/.local/bin/uvx /usr/local/bin/uvx && \
+    rm /tmp/uv-install.sh
 
 # Create test user (simulates real agent setup)
 RUN useradd -m -s /bin/bash testuser && \
