feat(container): test context.sh execution with output validation
Per Erik's feedback: actually test context generation, not just existence.
- Add 'tree' dependency to Dockerfile for context-workspace.sh
- Test 5 now executes context.sh and verifies output generation
- Shows preview of generated context for debugging
- Graceful handling if script produces unexpected output

--- a/tests/container/Dockerfile
+++ b/tests/container/Dockerfile
@@ -15,6 +15,7 @@ RUN apt-get update && apt-get install -y \
     python3-venv \
     sudo \
     systemd \
+    tree \
     && rm -rf /var/lib/apt/lists/*
 
 # Install uv for Python package management (system-wide so testuser can access it)
