feat: add symlink validation pre-commit hook
- Add validate_symlinks.py to check for broken symlinks
- Skip worktree directories (expected broken symlinks)
- Add to .pre-commit-config.yaml

Addresses Erik's feedback in issue #48 about needing a pre-commit
hook to catch broken symlinks before they're committed.

Co-authored-by: Bob <bob@superuserlabs.org>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,3 +57,10 @@ repos:
         language: system
         types: [markdown]
         files: ^tasks/.*\.md$
+      - id: validate-symlinks
+        name: Validate symlinks
+        description: Ensures all symlinks point to valid targets
+        entry: python3 ./gptme-contrib/scripts/precommit/validators/validate_symlinks.py
+        language: system
+        pass_filenames: false
+        always_run: true
