fix: comprehensive .gitignore defaults for new agents
The previous .gitignore was only 4 lines and had issues:
- `test` matched the tests/ directory
- `*cache*` was overly broad
- Missing patterns for Python, venv, IDE, secrets, logs

New agents forked from this template would track __pycache__,
.venv, .env files, IDE configs, and other artifacts.

Replaces with comprehensive defaults covering:
- Python runtime artifacts (__pycache__, .pyc, .egg-info)
- Virtual environments (.venv, venv)
- IDE files (.vscode, .idea, *.swp)
- Secrets (.env, secrets/, gptme.local.toml)
- Logs and temp files
- Agent runtime artifacts (locks, sessions, runs)
- Large binary files (with exceptions for state/ and assets/)

Addresses part of ErikBjare/bob#326.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,78 @@
-test
-*cache*
-*tmp*
-.vscode
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.egg-info/
+
+# Testing
+.coverage
+.coverage.*
+coverage.json
+htmlcov/
+.pytest_cache/
+
+# Virtual environments
+.venv/
+venv/
+env/
+
+# IDE & editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Secrets & environment
+.env
+.env.*
+!.env*.example
+secrets/
+gptme.local.toml
+
+# Logs & temporary files
+*.log
+/logs/
+/logs_*/
+/logs.backup*/
+tmp/
+
+# Cache directories
+.*cache*/
+*.cache*/
+
+# Agent runtime artifacts
+locks/
+state/locks/
+state/sessions/
+/runs/
+/queue/
+
+# Temporary prompt files
+.gptme-prompt-*.txt
+
+# Generated embeddings
+embeddings/
+
+# Large binary files (track selectively via .gitattributes if needed)
+*.json
+*.jsonl
+!state/*.json
+!.claude/settings.json
+*.png
+*.jpg
+*.pdf
+
+# Exception: assets/ are intentionally tracked
+!assets/**
+
+# Syncthing conflict files
+*.sync-conflict-*
+
+# Node/Bun (if using Claude Code backend)
+node_modules/
+.npm/
