test: add regression test for fork name replacement
Verifies that no "gptme-agent" references leak into forked workspaces
(excluding .git/ and gptme-contrib/ submodule). Catches the template
string replacement bug where fork.sh left unreplaced strings in agent
repos (e.g. README still showing "gptme-agent" instead of agent name).

The existing fork-test only checked that the agent name appeared in
gptme.toml, but didn't verify the absence of template strings.

--- a/.github/workflows/validate-workspace.yml
+++ b/.github/workflows/validate-workspace.yml
@@ -72,4 +72,17 @@ jobs:
           exit 1
         fi
 
+        # Regression test: verify no "gptme-agent" references remain
+        # (except in .git/ and gptme-contrib/ submodule which are not user-facing)
+        # Regression test for template string replacement
+        LEAKS=$(grep -r "gptme-agent" --include="*.md" --include="*.toml" --include="*.yaml" --include="*.yml" --include="*.sh" . \
+          --exclude-dir=.git --exclude-dir=gptme-contrib 2>/dev/null || true)
+        if [ -n "$LEAKS" ]; then
+          echo "❌ Found unreplaced 'gptme-agent' references in forked workspace:"
+          echo "$LEAKS"
+          exit 1
+        else
+          echo "✅ No 'gptme-agent' references leaked into forked workspace"
+        fi
+
         echo "=== All fork tests passed ==="
