--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,11 @@ repos:
       - id: mypy
         additional_dependencies: [types-tabulate, types-docutils]
         args: [--ignore-missing-imports, --check-untyped-defs]
+  - repo: https://github.com/shellcheck-py/shellcheck-py
+    rev: v0.10.0.1
+    hooks:
+      - id: shellcheck
+        args: [--severity=warning]
   - repo: local
     hooks:
       - id: check-names
