feat(ci): add check-symlinks.py to detect non-symlinked contrib scripts
Closes #63

Adds scripts/check-symlinks.py that detects agent workspace files that
are verbatim copies of gptme-contrib scripts/packages — they should be
symlinks instead, so they receive upstream updates automatically.

The script:
- Builds a content hash index of all files in gptme-contrib
- Walks scripts/ and packages/ in the target agent
- Reports any regular files whose content matches a contrib file
- Suggests the symlink command to fix each violation

CI integration:
- test.yml fork job: checks both the forked agent and template itself
- tests/container/run-tests.sh: Test 11 added for e2e container tests

Usage:
  python3 scripts/check-symlinks.py [<agent-dir>] [--verbose]

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,3 +49,15 @@ jobs:
         # Test basic usage (script will do its own validation)
         ./scripts/fork.sh test-agent
         ./scripts/fork.sh test-agent-named TestAgent
+
+    - name: Check for symlink drift in forked agent
+      run: |
+        # Verify the forked agent has no verbatim copies of gptme-contrib scripts
+        # (they should be symlinks so they receive upstream updates automatically)
+        python3 scripts/check-symlinks.py test-agent \
+          --contrib-dir test-agent/gptme-contrib
+
+    - name: Check template itself has no symlink drift
+      run: |
+        # The template repo itself should also be clean
+        python3 scripts/check-symlinks.py . --contrib-dir gptme-contrib
