--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,14 +50,15 @@ jobs:
         ./scripts/fork.sh test-agent
         ./scripts/fork.sh test-agent-named TestAgent
 
-    - name: Check for symlink drift in forked agent
+    - name: Verify forked agent has no unexpected non-symlink scripts
       run: |
-        # Verify the forked agent has no verbatim copies of gptme-contrib scripts
-        # (they should be symlinks so they receive upstream updates automatically)
-        python3 scripts/check-symlinks.py test-agent \
-          --contrib-dir test-agent/gptme-contrib
+        # Enforce the invariant: all scripts in a forked agent must be symlinks
+        # (to gptme-contrib, for auto-updating) or in the known agent-specific allowlist.
+        # Catches scripts added to the template that accidentally end up in forked agents
+        # without a contrib counterpart.
+        python3 scripts/check-symlinks.py test-agent --mode=forked
 
-    - name: Check template itself has no symlink drift
+    - name: Check template itself has no contrib copies (should be symlinks)
       run: |
-        # The template repo itself should also be clean
+        # The template itself should use symlinks for shared contrib scripts.
         python3 scripts/check-symlinks.py . --contrib-dir gptme-contrib
