feat(ci): enforce symlink hygiene — no unexpected scripts in forked agents (#64)
* feat(ci): add check-symlinks.py to detect non-symlinked contrib scripts

Closes #63

Adds scripts/check-symlinks.py that detects agent workspace files that
are verbatim copies of gptme-contrib scripts/packages — they should be
symlinks instead, so they receive upstream updates automatically.

The script:
- Builds a content hash index of all files in gptme-contrib
- Walks scripts/ and packages/ in the target agent
- Reports any regular files whose content matches a contrib file
- Suggests the symlink command to fix each violation

CI integration:
- test.yml fork job: checks both the forked agent and template itself
- tests/container/run-tests.sh: Test 11 added for e2e container tests

Usage:
  python3 scripts/check-symlinks.py [<agent-dir>] [--verbose]

* feat(check-symlinks): add name-collision detection for drifted scripts

In addition to exact hash matches (verbatim copies), the script now
detects scripts that share names with contrib files but have different
content. These are likely drifted copies that should be consolidated.

- Exact copies: error (exit 1) — must be symlinked
- Name collisions: warning (exit 0) — needs investigation

Addresses review feedback: broader check catches scripts that exist
in both places even if they've diverged, not just exact duplicates.

* fix(fork): remove template-specific scripts from forked agents

check-symlinks.py and fork.sh/fork.py are template maintenance/instantiation
tools that should stay in the template but not be copied to instantiated agents.
Instantiated agents don't need to detect drift in themselves, and never fork
further agents (YAGNI).

Per ErikBjare's feedback on PR #64.

* refactor(check-symlinks): add --mode=forked to enforce no-unexpected-scripts invariant

The original hash/name-match approach only caught scripts that were
verbatim copies of (or name-collided with) existing contrib files. It
would NOT catch a brand-new scri

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,3 +49,16 @@ jobs:
         # Test basic usage (script will do its own validation)
         ./scripts/fork.sh test-agent
         ./scripts/fork.sh test-agent-named TestAgent
+
+    - name: Verify forked agent has no unexpected non-symlink scripts
+      run: |
+        # Enforce the invariant: all scripts in a forked agent must be symlinks
+        # (to gptme-contrib, for auto-updating) or in the known agent-specific allowlist.
+        # Catches scripts added to the template that accidentally end up in forked agents
+        # without a contrib counterpart.
+        python3 scripts/check-symlinks.py test-agent --mode=forked
+
+    - name: Check template itself has no contrib copies (should be symlinks)
+      run: |
+        # The template itself should use symlinks for shared contrib scripts.
+        python3 scripts/check-symlinks.py . --contrib-dir gptme-contrib
